// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table patients as p {
  id INTEGER [pk]
  document_id INTEGER [not null, unique]
  name TEXT [not null]
  last_name TEXT
  email TEXT [unique]
  phone_number TEXT [unique]

  checks {
    `email IS NOT NULL OR phone_number IS NOT NULL` [name: 'check_null_email_or_telephone_number']
  }
}

Enum appointmentStatus{
  "CREATED"
  "CONFIRMED"
  "CANCELED"
  "NO_SHOW"
}

Table appointments as a {
  id INTEGER [pk]
  patient_id INTEGER [not null, ref: > p.id]
  status appointmentStatus [not null,default: "CREATED"]
  scheduled_for TEXT [not null] // ISO8601 datetime
  duration_minutes INTEGER [not null, default: "60"]
  
  indexes {
    scheduled_for
    (patient_id, scheduled_for)
  }
}

Table visits as v {
  id INTEGER [pk]
  appointment_id INTEGER [unique, not null, ref: - a.id]
  notes TEXT
}